[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-dataset-management"
version = "1.0.0"
description = "Backend API for YOLO dataset management with 100GB scale support"
readme = "docs/README.md"
requires-python = ">=3.9"
authors = [
    {name = "YOLO Dataset Team", email = "team@example.com"}
]
keywords = ["yolo", "dataset", "annotation", "computer-vision", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "celery[redis]>=5.3.4",
    "redis>=5.0.1",
    "google-cloud-tasks>=2.16.1",
    "google-cloud-storage>=2.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.0",
    "Pillow>=10.1.0",
    "PyYAML>=6.0.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/yolo-dataset-management"
Repository = "https://github.com/your-org/yolo-dataset-management.git"
Documentation = "https://your-org.github.io/yolo-dataset-management/"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
